<?xml version="1.0"?>
<package format="2">
  <name>sound_ros</name>
  <version>0.0.0</version>
  <description>The sound_ros package</description>

  <maintainer email="sharif1093@gmail.com">Mohammadreza Sharif</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sound_play</exec_depend>

  <export>
  </export>
</package>
